<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    android:layout_gravity="center_vertical"
    android:gravity="center"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:id="@+id/login_logo"
        android:src="@drawable/munch_colored"
        android:layout_width="200dp"
        android:layout_height="200dp"/>

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:hint="@string/hint_username"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginBottom="10dp"
        android:layout_margin="10dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:hint="@string/hint_password"/>

    <Button
        android:id="@+id/login_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:textColor="@color/colorText"
        android:layout_margin="10dp"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/login_new_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textColor="@color/colorText"
        android:text="@string/new_user"/>

</LinearLayout>