<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/login_logo"
        android:src="@drawable/munch_colored"
        android:layout_width="200dp"
        android:layout_height="200dp"/>

    <EditText
        android:id="@+id/user_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_name"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:backgroundTint="@color/colorPrimary"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/user_register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user_register_username_hint"
        android:layout_gravity="center"
        android:gravity=""
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorPrimary"

        android:textColorHint="@color/colorText"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/user_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/user_register_password_hint"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/user_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/button"
        android:textColor="@color/colorText"
        android:text="@string/user_register_button" />

</LinearLayout>